<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.westga.cs6242.rollcall.AddClassActivity"
    android:background="#DFF9B9">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_class"
        android:id="@+id/lblHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout4"
        android:gravity="center_vertical"
        android:layout_below="@+id/lblHeader">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/new_class_id"
            android:id="@+id/lblClassId"
            android:foregroundTintMode="add" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtClassId"
            android:hint="@string/new_class_id_hint"
            android:layout_gravity="right"
            android:textSize="12dp"
            android:gravity="center_vertical"
            android:textIsSelectable="false"
            android:editable="true"
            android:enabled="true"
            android:maxLength="30" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignLeft="@+id/linearLayout4"
        android:layout_alignStart="@+id/linearLayout4"
        android:gravity="center_vertical"
        android:id="@+id/linearLayout4"
        android:layout_alignRight="@+id/linearLayout4">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/new_class_name"
            android:id="@+id/lblClassName"
            android:foregroundTintMode="add" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtClassName"
            android:hint="@string/new_class_name_hint"
            android:layout_gravity="right"
            android:textSize="12dp"
            android:inputType="textNoSuggestions"
            android:maxLength="30" />
    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_class"
        android:id="@+id/btnAdd"
        android:textSize="12dp"
        android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="btnAdd_onClick" />

</RelativeLayout>
