<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.westga.cs6242.rollcall.EditStudentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_student"
        android:id="@+id/lblHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout0"
        android:layout_below="@+id/lblHeader"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:text="@string/select_student"
            android:id="@+id/lblSelect"
            android:foregroundTintMode="add"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignLeft="@+id/linearLayout3"
            android:layout_alignStart="@+id/linearLayout3"
            android:layout_marginTop="0dp" />

        <Spinner
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:id="@+id/spnStudent"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown"
            android:prompt="@string/new_student_id"
            android:padding="0dp"
            android:gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout1"
        android:gravity="center_vertical"
        android:layout_below="@+id/linearLayout0"
        android:layout_alignLeft="@+id/linearLayout0"
        android:layout_toRightOf="@+id/linearLayout0">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/new_student_id"
            android:id="@+id/lblStudentId"
            android:foregroundTintMode="add" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtStudentId"
            android:hint="@string/new_student_id_hint"
            android:layout_gravity="right"
            android:textSize="12dp"
            android:gravity="center_vertical"
            android:textIsSelectable="false"
            android:editable="true"
            android:enabled="true"
            android:maxLength="30" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignStart="@+id/linearLayout1"
        android:gravity="center_vertical"
        android:id="@+id/linearLayout2"
        android:layout_toRightOf="@+id/linearLayout1">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/new_student_first_name"
            android:id="@+id/lblFirstName"
            android:foregroundTintMode="add" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtStudentFirstName"
            android:hint="@string/new_student_first_name_hint"
            android:layout_gravity="right"
            android:textSize="12dp"
            android:inputType="textNoSuggestions"
            android:maxLength="30" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:gravity="center_vertical"
        android:id="@+id/linearLayout3"
        android:layout_toRightOf="@+id/linearLayout2">

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/new_student_last_name"
            android:id="@+id/lblLastName"
            android:foregroundTintMode="add" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtStudentLastName"
            android:hint="@string/new_student_last_name_hint"
            android:layout_gravity="right"
            android:textSize="12dp"
            android:inputType="textNoSuggestions"
            android:maxLength="30" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:id="@+id/linearLayout4"
        android:layout_alignStart="@id/linearLayout3"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_alignEnd="@+id/linearLayout3"
        android:layout_marginTop="20dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/update_student"
            android:id="@+id/btnSavw"
            android:textSize="12dp"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:onClick="btnUpdate_onClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_student"
            android:id="@+id/btnDelete"
            android:textSize="12dp"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/linearLayout3"
            android:layout_alignStart="@+id/linearLayout3"
            android:layout_marginLeft="40dp"
            android:onClick="btnDelete_onClick" />
    </LinearLayout>

</RelativeLayout>
