<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.westga.cs6242.rollcall.EnrollStudentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enroll_new_student"
        android:id="@+id/lblHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20dp" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout0"
        android:layout_below="@+id/lblHeader"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/select_student"
            android:id="@+id/lblSelectStudent"
            android:foregroundTintMode="add"
            android:layout_alignLeft="@+id/linearLayout0"
            android:layout_alignStart="@+id/linearLayout0"
            android:layout_marginTop="0dp" />

        <Spinner
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:id="@+id/spnStudent"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown"
            android:prompt="@string/new_student_id"
            android:padding="0dp"
            android:gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout0"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/select_class"
            android:id="@+id/lblSelect"
            android:foregroundTintMode="add"
            android:layout_below="@+id/linearLayout1"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout3"
            android:layout_marginTop="0dp" />

        <Spinner
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:id="@+id/spnClass"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown"
            android:prompt="@string/new_class_id"
            android:padding="0dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/linearLayout1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/enroll_student"
            android:id="@+id/btnEnroll"
            android:textSize="12dp"
            android:onClick="btnEnroll_onClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/enroll_student"
            android:id="@+id/btnUnenroll"
            android:textSize="12dp"
            android:onClick="btnEnroll_onClick"
            android:layout_marginLeft="50dp" />

    </LinearLayout>





</RelativeLayout>
