<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.westga.cs6242.rollcall.ShowStatisticsActivity"
    android:background="#FFCC99">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_statistics"
        android:id="@+id/lblHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout00"
        android:layout_below="@+id/lblHeader"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/select_class"
            android:id="@+id/lblSelect"
            android:foregroundTintMode="add"
            android:layout_below="@+id/linearLayout1"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout1"
            android:layout_marginTop="0dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/spnClass"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown"
            android:prompt="@string/new_class_id"
            android:padding="0dp" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout01"
        android:layout_below="@+id/linearLayout00"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:text="@string/select_student"
            android:id="@+id/lblSelectStudent"
            android:foregroundTintMode="add"
            android:layout_alignLeft="@+id/linearLayout0"
            android:layout_alignStart="@+id/linearLayout0"
            android:layout_marginTop="0dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/spnStudent"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown"
            android:prompt="@string/new_student_id"
            android:padding="0dp"
            android:gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout02"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout01">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:id="@+id/btnShow"
            android:textSize="12dp"
            android:onClick="btnShow_onClick"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout02"
        android:layout_marginTop="30dp"
        android:background="@drawable/control_border2"
        android:layout_alignParentLeft="false"
        android:id="@+id/relativeLayout"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/number_classes"
                android:id="@+id/textView3"
                android:layout_marginRight="10dp"
                android:textSize="14dp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/lblNumClasses"
                android:layout_marginRight="0dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/number_students"
                android:id="@+id/textView4"
                android:layout_marginRight="10dp"
                android:textSize="14dp"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/lblNumStudents"
                android:layout_marginRight="0dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout5"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/number_dates"
                android:id="@+id/textView5"
                android:layout_marginRight="10dp"
                android:textSize="14dp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/lblNumDates"
                android:layout_marginRight="0dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout5"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/number_filled_seats"
                android:id="@+id/textView6"
                android:layout_marginRight="10dp"
                android:textSize="14dp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/lblNumFilledSeats"
                android:layout_marginRight="0dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout7"
            android:layout_below="@+id/linearLayout6"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/number_total_seats"
                android:id="@+id/textView7"
                android:layout_marginRight="10dp"
                android:textSize="14dp"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/lblNumTotalSeats"
                android:layout_marginRight="0dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout8"
            android:layout_below="@+id/linearLayout7"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/average_attendance"
                android:id="@+id/textView8"
                android:textSize="14dp"
                android:textIsSelectable="true"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="000.0%"
                android:id="@+id/lblAverageAttendance"
                android:layout_marginRight="0dp"
                android:textSize="14dp" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
